--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-6">
       <h1>Checkout our games</h1>
-
+       <p>Never Had I ever</p>
       <p>Woops, they are yet to be implemented.</p>
     </div>
   </div>
