--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-6">
-      <h1>Checkout our games</h1>
-
-      <p>Woops, they are yet to be implemented.</p>
+    <div class="col-sm-12 text-center">
+      <h1 class="p-5">Games</h1>
+      <div class="d-flex align-items-center justify-content-center p-1" style="margin: 0 auto; border: 1px solid black; font-size: 20px; width: 200px; height: 100px;">
+        <p>Never Had I ever</p> <!-- Will change to Game Instance variable -->
+      </div>
     </div>
   </div>
 </div>
