--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,5 +1,2 @@
-<% game = Game.find(@instance.game_id)%>
-<% player = User.find@instance.user_id%>
-
-<h2>Host: <%= player.nickname %></h2>
-<h2>Game: <%= game.name %></h2>
+<h2>Host: <%= @player.nickname %></h2>
+<h2>Game: <%= @game.name %></h2>
