--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,2 +1,13 @@
-<h2>Host: <%= @player.nickname %></h2>
+<h2>Host: <%= @host.nickname %></h2>
 <h2>Game: <%= @game.name %></h2>
+
+<h2>Players:</h2>
+<ul>
+  <% @players.each do |player| %>
+    <% user = User.find(player.user_id)%>
+    <li><%= user.nickname%></li>
+  <% end %>
+</ul>
+
+<h2>Pin number:</h2>
+<%= @instance.pin %>
