--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,10 +1,4 @@
-<<<<<<< HEAD
-<% game = Game.find(@instance.game_id)%>
-<% player = User.find@instance.user_id%>
-
-<h2>Host: <%= player.nickname %></h2>
-<h2>Game: <%= game.name %></h2>
-=======
+<div id="instance" data-instance-id="<%=@instance.id%>">
 <h2>Host: <%= @player.nickname %></h2>
 <h2>Game: <%= @game.name %></h2>
->>>>>>> c98f7131d567b65df288af5adf9a88a1ed36b813
+</div>
