fix on create dbi

--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,6 +1,6 @@
 
 <!-- Added data-player-name to see if player.username is being passed to JS-->
-<div id="instance" data-instance-id="<%=@instance.id%>" data-player-id="<%=@player.id%>" data-player-name="<%=@player.username%>">
+<div id="instance" data-instance-id="<%=@instance.id%>" data-host-id="<%=@instance.user_id%>" data-host-name="<%=@instance.user.username%>">
 
 <h2>Players:</h2>
 <ul>
