--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -17,7 +17,7 @@
           </div>
 
           <div class="my-2">
-            <%= form_with url: players_path, method: :post do |f| %>
+            <%= form_with url: players_path, local: true, method: :post do |f| %>
               <%= f.text_field :pin, value: params[:pin] %>
               <%= f.submit "Join a Lobby", class: "btn btn-primary" %>
             <% end %>
