--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -2,16 +2,9 @@
 <!-- Added data-player-name to see if player.username is being passed to JS-->
 <div id="instance" data-instance-id="<%=@instance.id%>" data-host-id="<%=@instance.user_id%>" data-host-name="<%=@instance.user.username%>">
 
-<h2>Players:</h2>
-<ul>
-  <% @players.each do |player| %>
-    <% user = User.find(player.user_id)%>
-    <li><%= user.nickname%></li>
-  <% end %>
-</ul>
-
-<h2>Pin number:</h2>
-<%= @instance.pin %>
+<!-- Waiting page -->
+  <%= render "instance_waiting_page", players: @players, instance: @instance  %>
 
 </div>
+
 
