--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,10 +1,8 @@
 
 <!-- Added data-player-name to see if player.username is being passed to JS-->
-<div id="instance" data-instance-id="<%=@instance.id%>" data-host-id="<%=@instance.user_id%>" data-host-name="<%=@instance.user.username%>">
+<div id="instance" data-instance-id="<%=@instance.id%>" data-host-id="<%=@instance.user_id%>" data-host-name="<%=@instance.user.username%>" data-player-name="<%=@each_player_name%>" data-player-id="<%=@each_player_id%>">
 
 <!-- Waiting page -->
   <%= render "instance_waiting_page", players: @players, instance: @instance  %>
 
 </div>
-
-
