--- a/app/views/instances/_show_question.erb
+++ b/app/views/instances/_show_question.erb
@@ -1,4 +1,4 @@
 <!-- Question Partial-->
 <div class="container-fluid d-flex justify-content-center">
-    <p>Never Have I ever <%= game.games_contents.sample.content %> </p>
+    <p>Never Have I ever <%= game.game_contents.sample.content %> </p>
 </div>
