minimal styling, no colorings yet

--- a/app/views/instances/_instance_question_page.html.erb
+++ b/app/views/instances/_instance_question_page.html.erb
@@ -1,1 +1,14 @@
-<!-- Question page to be added soon -->
+<!-- Question page, Hard coded for now, will change it soon -->
+<div class="container-fluid" style="height: 75vh;">
+  <div class="d-flex justify-content-center align-items-center h-100">
+    <div class="text-center">
+      <h3>Never Had I ever enjoyed using CSS</h3> <!-- hard coded for now, must be randomly generate -->
+      <div class="p-4">
+        <!-- "Yes" and "No" buttons here will be replaced -->
+        <%= link_to "Yes", "#", class:"btn btn-primary m-2" %>
+        <%= link_to "No", "#", class:"btn btn-danger m-2" %>
+        <!-------------------------------------------------->
+      </div>
+    </div>
+  </div>
+</div>
