--- a/app/views/instances/_instance_waiting_page.html.erb
+++ b/app/views/instances/_instance_waiting_page.html.erb
@@ -1,12 +1,68 @@
-<h2>Players:</h2>
-<ul>
-  <% players.each do |player| %>
-    <% user = User.find(player.user_id)%>
-    <li><%= user.nickname%></li>
-  <% end %>
-</ul>
+<div class="container-fluid">
+    <h3 class="py-4 text-center"><%= game.name %></h3>
+  <div class="row justify-content-center">
+    <div class="col-lg-6 col-md-4 col-sm-6 p-3 bg-white" style="border-bottom: 3px solid #F4F4F4; height: 360px; overflow: auto;">
+      <div class="d-flex justify-content-between">
+        <h5>Players:</h5>
+        <p>0 / 5</p> <!--number of players here -->
+      </div>
+        <% players.each do |player| %>
+          <% user = User.find(player.user_id)%>
+          <div class>
+            <div class="card shadow-sm p-3 bg-white rounded">
+              <%= user.nickname%>
+            </div>
+          </div>
+        <% end %>
+    </div>
 
-<h2>Pin number:</h2>
-<%= instance.pin %>
-
-<%= link_to "Start Game", instance_path(instance), class: "btn btn-primary", remote: true %>
+    <div class="col-lg-6 col-md-4 col-sm-6 bg-white p-3" style="height: fit-content">
+    <!-- Game Settings, select dropdowns are hardcoded for now -->
+      <h5>Game Settings</h5>
+      <div class="players d-flex justify-content-between">
+        <div>
+          <p>Players:</p>
+        </div>
+        <div>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>1</option>
+            <option value="1">2</option>
+            <option value="2">3</option>
+            <option value="3">4</option>
+          </select>
+        </div>
+      </div>
+        <div class="rounds d-flex justify-content-between">
+          <div>
+            <p>Rounds:</p>
+          </div>
+          <div>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>1</option>
+            <option value="1">2</option>
+            <option value="2">3</option>
+            <option value="3">4</option>
+          </select>
+        </div>
+        
+      </div>
+        <div class="imposter d-flex justify-content-between">
+          <div>
+            <p>Imposter:</p>
+          </div>
+          <div>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>Yes</option>
+            <option value="No">No</option>
+          </select>
+        </div>
+        
+      </div>
+      <p>Instance pin: <%= instance.pin %></p>
+    </div>
+    <!-- Start button, will also change in the future -->
+    <div class="col-12 justify-content-center text-center py-3">
+      <%= link_to "Start Game", instance_path(instance), class: "btn btn-primary", remote: true, style: "width: 100%" %>
+    </div>
+  </div>
+</div>
