--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12 text-center">
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-12 text-center">
       <h1 class="p-5">Games</h1>
 
         <% @games.each do |game| %>
