--- a/app/views/instances/_instance_waiting_page.html.erb
+++ b/app/views/instances/_instance_waiting_page.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <h3 class="py-4 text-center"><%= game.name %></h3>
-  <div class="row justify-content-center">
+  <div class="row justify-content-around">
     <div class="col-lg-6 col-md-4 col-sm-6 p-3 bg-white" style="border-bottom: 3px solid #F4F4F4; height: 360px; overflow: auto;">
       <div class="d-flex justify-content-between">
         <h5>Players:</h5>
@@ -18,7 +18,7 @@
 
     <div class="col-lg-6 col-md-4 col-sm-6 bg-white p-3" style="height: fit-content">
     <!-- Game Settings, select dropdowns are hardcoded for now -->
-      <h5>Game Settings</h5>
+      <h5 class="text-center">Game Settings</h5>
       <div class="players d-flex justify-content-between">
         <div>
           <p>Players:</p>
@@ -62,7 +62,7 @@
     </div>
     <!-- Start button, will also change in the future -->
     <div class="col-12 justify-content-center text-center py-3">
-      <%= link_to "Start Game", instance_path(instance), class: "btn btn-primary", remote: true, style: "width: 100%" %>
+      <%= link_to "Start Game", instance_path(instance), class: "btn btn-primary w-75", remote: true %>
     </div>
   </div>
 </div>
