--- a/app/views/instances/_show_question.erb
+++ b/app/views/instances/_show_question.erb
@@ -2,7 +2,8 @@
 <div class="container-fluid" style="height: 75vh;">
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-center">
-      <h3>Never Have I ever <%= game.game_contents.sample.content %></h3>
+      <h5>Round <% round.number %></h5>
+      <h3>Never Have I ever <%= game_content.content %></h3>
       <div class="p-4">
         <!-- "Yes" and "No" buttons here will be replaced -->
         <%= link_to "Yes", "#", class:"btn btn-primary m-2" %>
