added class for players contiainter

--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <h3 class="py-4 text-center"><%= game.name %></h3>
   <div class="row justify-content-around">
-    <div class="col-lg-6 col-md-4 col-sm-6 p-3 bg-white" style="border-bottom: 3px solid #F4F4F4; height: 360px; overflow: auto;">
+    <div class="container-players col-lg-6 col-md-4 col-sm-6 p-3 bg-white" style="border-bottom: 3px solid #F4F4F4; height: 360px; overflow: auto;">
       <div class="d-flex justify-content-between">
         <h5>Players:</h5>
         <p>0 / 5</p> <!--number of players here -->
