Auto refresh when other players joined the lobby

--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -3,18 +3,13 @@
   <div class="row justify-content-around">
     <div class="col-lg-6 col-md-4 col-sm-6 p-3 bg-white" style="border-bottom: 3px solid #F4F4F4; height: 360px; overflow: auto;">
       <div class="d-flex justify-content-between">
-        <h5>Players:</h5>
-        <p>0 / 5</p> <!--number of players here -->
+          <%= render  "player_count", players: players %> <!--number of players here -->
       </div>
-        <% players.each do |player| %>
-          <% user = User.find(player.user_id)%>
-          <div class>
-            <div class="card shadow-sm p-3 bg-white rounded">
-              <%= user.nickname%>
-            </div>
-          </div>
-        <% end %>
+      <div id="player-list">
+          <%= render "player_list", players: players %>
+      </div>
     </div>
+
 
     <div class="col-lg-6 col-md-4 col-sm-6 bg-white p-3" style="height: fit-content">
     <!-- Game Settings, select dropdowns are hardcoded for now -->
@@ -58,7 +53,10 @@
         </div>
 
       </div>
-      <p>Instance pin: <%= instance.pin %></p>
+      <div class="d-flex justify-content-between">
+        <p>Instance pin:</p>
+        <%= instance.pin %>
+      </div>
     </div>
     <div class="col-12 justify-content-center text-center py-3">
       <%= simple_form_for [@instance] do |f| %>
