--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// de-bored color scheme
+$kiroi:  #FEDA02;
+$midori: #52D75F;
+$aoi: #035f7aa2;
+$mizu: #364ec9;
+$murasaki: #8A0AB7;
+$pink: #e42c63;
+$bg: #035d79cc
