--- a/app/views/components/_modal.html.erb
+++ b/app/views/components/_modal.html.erb
@@ -1,14 +1,14 @@
-<button type="button" class="btn btn-info" data-toggle="modal" data-target="#staticBackdrop">Join</button>
+<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#staticBackdrop">Join</button>
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+    <div id="modal" class="modal-content w-50 m-auto">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Enter lobby pin</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
+        <h5>Enter Pin</h5>
         <%= form_with url: players_path, local: true, method: :post do |f| %>
           <%= f.text_field :pin, value: params[:pin]%>
       </div>
