--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-      <h1 class="p-5">Games</h1>
+      <h1 class="p-5">De.Bored Games</h1>
 
         <% @games.each do |game| %>
           <!-- Card space for Front End Master Hiro -->
-      <div class="card d-flex flex-column align-items-center justify-content-center p-3 bg-white shadow">
+      <div id="game-index" class="card d-flex flex-column align-items-center justify-content-center p-3 shadow">
         <div>
           <h4><%= game.name%></h4>
         </div>
