--- a/app/views/instances/_show_question.erb
+++ b/app/views/instances/_show_question.erb
@@ -7,7 +7,7 @@
       <div class="p-4">
         <!-- "Yes" and "No" buttons here will be replaced -->
         <%= link_to "Yes", "#", class:"btn btn-primary m-2" %>
-        <%= link_to "No", "#", class:"btn btn-danger m-2" %>
+        <%= link_to "No", "#", class:"btn btn-warning m-2" %>
         <!-------------------------------------------------->
       </div>
     </div>
