replace the freakin navbar

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -36,6 +36,10 @@ $body-color: white;
     background-position-y: center;
 }
 
+#game-list{
+    border: 2px solid black
+}
+
 #players, #settings{
     background-color: $bg;
 }
