--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,6 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@1,500&family=Pacifico&display=swap');
 // Define fonts for body and headers
 $body-font: "roboto", "Helvetica", "sans-serif";
 $headers-font: "dosis", "Helvetica", "sans-serif";
