change to yes and no

--- a/app/views/instances/_show_question.erb
+++ b/app/views/instances/_show_question.erb
@@ -8,8 +8,8 @@
         <!-- "Yes" and "No" buttons here will be replaced -->
         <% @player_input = PlayerInput.new %>
         <%= simple_form_for([@instance, @round, @player_input]) do |f| %>
-          <%= f.input :input_value, as: :radio_buttons,
-          collection: ['True', 'False'] %>
+          <%= f.input :input_value, label: "", as: :radio_buttons,
+          collection: ['Yes ⭕', 'No ❌'] %>
           <%= f.submit "Submit", class: "btn btn-primary" %>
         <% end %>
         <!-------------------------------------------------->
