--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
     <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link btn btn-primary p-2" %>
         </li>
         </div>
       <% else %>
