--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -6,14 +6,14 @@
         <h5>Players:</h5>
         <p> <%= players.count %> / <%= instance.max_players %></p> <!--number of players here -->
       </div>
-        <% players.each do |player| %>
-          <% user = User.find(player.user_id)%>
-          <div class>
-            <div id="card" class="card shadow-sm p-3 my-1 rounded">
-              <%= user.nickname%>
-            </div>
+      <% players.each do |player| %>
+        <% user = User.find(player.user_id)%>
+        <div class>
+          <div id="card" class="card shadow-sm p-3 my-1 rounded">
+            <%= user.nickname%>
           </div>
-        <% end %>
+        </div>
+      <% end %>
     </div>
 
     <div id="settings" class="col-lg-6 col-md-4 col-sm-6 p-3" style="height: fit-content">
@@ -23,45 +23,50 @@
         <div>
           <p>Max Players:</p>
         </div>
+      <div>
+        <select class="form-select" aria-label="Default select example">
+          <option selected><%= instance.max_players %></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
+      </div>
+    </div>
+      <div class="rounds d-flex justify-content-between">
         <div>
-          <select class="form-select" aria-label="Default select example">
-            <option selected><%= instance.max_players %></option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-          </select>
+          <p>Rounds:</p>
         </div>
+        <div>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>1</option>
+          <option value="1">2</option>
+          <option value="2">3</option>
+          <option value="3">4</option>
+        </select>
       </div>
-        <div class="rounds d-flex justify-content-between">
-          <div>
-            <p>Rounds:</p>
-          </div>
-          <div>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>1</option>
-            <option value="1">2</option>
-            <option value="2">3</option>
-            <option value="3">4</option>
-          </select>
+    </div>
+      <div class="imposter d-flex justify-content-between">
+        <div>
+          <p>Imposter:</p>
         </div>
-
+        <div>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Yes</option>
+          <option value="No">No</option>
+        </select>
       </div>
-        <div class="imposter d-flex justify-content-between">
-          <div>
-            <p>Imposter:</p>
-          </div>
-          <div>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Yes</option>
-            <option value="No">No</option>
-          </select>
-        </div>
-      </div>
-      <div class="d-flex justify-content-between">
-        <p>Instance pin:</p>
-        <p><%= instance.pin %></p>
-      </div>
+    </div>
+    <div class="d-flex justify-content-between">
+      <p>Instance pin:</p>
+      <p><%= instance.pin %></p>
+    </div>
+    <div class="col-12 justify-content-center text-center py-3">
+      <% @round = Round.new %>
+      <%= simple_form_for([@instance, @round]) do |f| %>
+        <!-- Implement logic/condition so than only Host should see/use this -->
+        <%= f.submit "Start Game", class:"btn btn-primary w-75" %>
+      <% end %>
     </div>
   </div>
 </div>
