--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,7 +26,7 @@ $border-radius-sm: 2px;
 $body-bg: $bg;
 $body-color: white;
 
-#game-index {
+#game-index, #card {
     background-color: $mizu;
 }
 
