--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid">
+      <%= render  "components/logo" %>
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 text-center">
       <h1 class="p-5">De.Bored Games</h1>
-      
         <% @games.each do |game| %>
           <!-- Card space for Front End Master Hiro -->
       <div id="game-index" class="card d-flex flex-column align-items-center justify-content-center p-3 shadow">
