--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -3,14 +3,20 @@
 
 <% elsif @round.phase == 2 %>
   <div class="container-fluid">
-    <h3 class="py-4 text-center">This Round's Results</h3>
-      <div id="inputs" data-round-id="<%= @round.id %>">
+  <h3 class="py-4 text-center">This Round's Results</h3>
+    <div id="inputs" data-round-id="<%= @round.id %>">
 
-      <% @round.player_inputs.each do |player_input| %>
-        <%= render 'player_inputs/player_input', player_input: player_input %>
-      <% end %>
+    <% @round.player_inputs.each do |player_input| %>
+      <%= render 'player_inputs/player_input', player_input: player_input %>
+    <% end %>
 
     </div>
+
+    <% @round = Round.new %>
+    <%= simple_form_for([@instance, @round]) do |f| %>
+      <!-- Implement logic/condition so than only Host should see/use this -->
+      <%= f.submit "Continue", class:"btn btn-primary" %>
+    <% end %>
   </div>
 
 <% end %>
