--- a/app/views/rounds/_show_question.erb
+++ b/app/views/rounds/_show_question.erb
@@ -15,13 +15,13 @@
         <!-------------------------------------------------->
         <div class="row justify-content-center">
           <div class="col-6">
-            <%= link_to instance_round_player_inputs_path(input_value: "Yes ⭕", round_id: params[:id]), method: :post do %>
+            <%= link_to instance_round_player_inputs_path(input_value: "Yes ⭕", round_id: params[:id]), method: :post, data: {confirm: "Are you sure?"} do %>
               <div class="btn btn-primary">Yes</div>
             <% end %>
           </div>
 
           <div class="col-6">
-            <%= link_to instance_round_player_inputs_path(input_value: "No ❌", round_id: params[:id]), method: :post do %>
+            <%= link_to instance_round_player_inputs_path(input_value: "No ❌", round_id: params[:id]), method: :post, data: {confirm: "Are you sure?"} do %>
               <div class="btn btn-warning">No</div>
             <% end %>
           </div>
