--- a/app/assets/stylesheets/components/_checkbox.scss
+++ b/app/assets/stylesheets/components/_checkbox.scss
@@ -56,3 +56,7 @@ input[type="checkbox"]::before {
 input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
+
+abbr[title="required"] {
+  display: none;
+}
