--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 text-center">
       <h1 class="p-5">De.Bored Games</h1>
-      
+
         <% @games.each do |game| %>
           <!-- Card space for Front End Master Hiro -->
       <div id="game-index" class="card d-flex flex-column align-items-center justify-content-center p-3 shadow">
@@ -14,7 +14,7 @@
           <div class="d-flex justify-content-around w-75">
             <div>
               <%= link_to instances_path(game_id: game.id), method: :post do %>
-                <div class="btn btn-primary">Create</div>
+                <div class="btn btn-primary">Create a lobby</div>
               <% end %>
             </div>
             <div>
