--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,9 +2,12 @@
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 text-center">
       <h1 class="p-5">De.Bored Games</h1>
-      
-        <% @games.each do |game| %>
-          <!-- Card space for Front End Master Hiro -->
+      <p>You are logged in as: <%= @current_user.username %></p>
+      <!-- Fake button, will be implemented later -->
+      <button class="btn btn-primary mb-3">Change your nickname</button>
+
+      <% @games.each do |game| %>
+        <!-- Card space for Front End Master Hiro -->
       <div id="game-index" class="card d-flex flex-column align-items-center justify-content-center p-3 shadow">
         <div>
           <h3><%= game.name%></h3>
