--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -3,9 +3,13 @@
 
 <% elsif @round.phase == 2 %>
   <div class="container-fluid">
-    <h3 class="py-4 text-center">Round <%= @round.number %> Results</h3>
+    <div>
+      <h3 class="py-4 text-center">Round <%= @round.number %> Results</h3>
+    </div>
+    <div class="py-2 text-center">
+      <p>Never have I ever <%= @game_content.content %></p>
+    </div>
     <div class="row justify-content-center" style="height: 50vh">
-    <p>Never have I ever <%= @game_content.content %></p>
       <div class="col-lg-4 col-md-6 col-sm-12">
         <div id="inputs" data-round-id="<%= @round.id %>">
 
