basic design for now, will add more in the future

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+#game-name{
+    font-family: 'Titan One', cursive;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.534);
+    color: #f4d6ffca;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #190022;
+}
