--- a/app/views/rounds/_show_question.erb
+++ b/app/views/rounds/_show_question.erb
@@ -3,23 +3,29 @@
     <div class="text-center">
       <h5>Round <%= round.number %></h5>
       <h3>Never Have I ever <%= game_content.content %></h3>
-      <div class="p-4">
 
+      <div class="p-4">
         <div class="row justify-content-center">
+
+          <% @player_input = PlayerInput.new %>
+
           <div class="col-6">
-            <%= link_to instance_round_player_inputs_path(input_value: "Yes", round_id: params[:id]), method: :post do %>
-              <div class="btn btn-primary">Yes I have</div>
+            <%= simple_form_for([instance, round, @player_input]) do |f| %>
+              <%= hidden_field_tag :input_value, "Yes" %>
+              <%= f.submit "Yes I have", class:"btn btn-primary" %>
             <% end %>
           </div>
 
           <div class="col-6">
-            <%= link_to instance_round_player_inputs_path(input_value: "No", round_id: params[:id]), method: :post do %>
-              <div class="btn btn-warning">No I haven't</div>
+            <%= simple_form_for([instance, round, @player_input]) do |f| %>
+              <%= hidden_field_tag :input_value, "No" %>
+              <%= f.submit "No I haven't", class:"btn btn-warning" %>
             <% end %>
           </div>
         </div>
 
       </div>
+
     </div>
   </div>
 </div>
