Local in partial

--- a/app/views/components/_nickname_form.html.erb
+++ b/app/views/components/_nickname_form.html.erb
@@ -1,4 +1,4 @@
-<p>You are logged in as: <%= @current_user.nickname %></p>
+<p>You are logged in as: <%= current_user.nickname %></p>
 
 <div class="nickname-edit">
   <button class="btn btn-primary mb-3" id="nickname-btn">Change your nickname</button>
