--- a/app/views/components/_nickname_form.html.erb
+++ b/app/views/components/_nickname_form.html.erb
@@ -2,7 +2,7 @@
 
 <div class="nickname-edit">
   <button class="btn btn-primary mb-3" id="nickname-btn">Change your nickname</button>
-  <%= simple_form_for user, html: { class: 'd-none', id: 'nickname-form' }  do |f| %>
+  <%= simple_form_for current_user, html: { class: 'd-none', id: 'nickname-form' }  do |f| %>
     <%= f.input :nickname %>
     <%= f.submit "Edit", class: "btn btn-primary" %>
   <% end %>
