--- a/app/views/components/_nickname_modal.html.erb
+++ b/app/views/components/_nickname_modal.html.erb
@@ -6,7 +6,7 @@
       <div class="modal-body">
         <h5>Edit your nickname</h5>
         <%= simple_form_for current_user, remote: true do |f| %>
-          <%= f.input :nickname %>
+          <%= f.input :nickname, label: "" %>
           <div class="pt-3">
             <%= f.submit "Edit", class: "btn btn-warning" %>
           </div>
